finished lab3